<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="title_activity_detail_neighbour">DetailNeighbourActivity</string>
    <string name="action_settings">Settings</string>
</resources>
